[package]
name = "loiter-cli"
version = "0.1.0"
edition = "2021"
authors = ["Thane Thomson <connect@thanethomson.com>"]
license = "Apache-2.0"
repository = "https://github.com/thanethomson/loiter"
description = "A simple command line-based time tracking tool."

[[bin]]
name = "loiter"
path = "src/main.rs"

[dependencies]
home = "0.5.3"
log = "0.4"
loiter = { version = "0.1.0", path = "../loiter" }
simple_logger = "1"
structopt = "0.3"
time = { version = "0.3.5", features = ["formatting", "parsing"] }


