[package]
name = "loiter"
version = "0.1.0"
edition = "2021"
authors = ["Thane Thomson <connect@thanethomson.com>"]
license = "Apache-2.0"
repository = "https://github.com/thanethomson/loiter"
description = """
    A time tracking library that focuses on providing abstractions and a
    simple filesystem-based storage mechanism.
    """

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
thiserror = "1.0"
time = { version = "0.3.5", features = ["formatting", "local-offset", "parsing", "serde", "macros"] }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
lazy_static = "1.4"
tempfile = "3.2"

